--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Markazi+Text:wght@400..700&family=Outfit:wght@100..900&display=swap');
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: Markazi Text;
 }
 
 body{
@@ -10,4 +12,18 @@ body{
 a{
   text-decoration: none;
   color: inherit;
+}
+button{
+  background-color: #F4CE14;
+  padding: 10px;
+  border: 1px solid #495E57;
+  border-radius: 8px;
+  color: #495E57;
+  font-size: 20px;
+}
+button:hover{
+  background-color: #495E57;
+  padding: 10px;
+  border: 1px solid #F4CE14;
+  color:#F4CE14 ;
 }
