--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,76 +1,59 @@
-
 .footer{
+    color: #495E57;
+    background-color: #EDEFEE;
     display: flex;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 3%;
-    border-top: 1px solid gray;
-    color: #333333;
-  
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px 8vw;
+    padding-top: 80px;
+    margin-top: 100px;
 }
-.footer-left img{
-    width: 150%;
+.footer-content{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    gap: 80px;
+}
+.footer-content-right, .footer-content-center, .footer-content-left{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+.footer-content-right li, .footer-content-center li, .footer-content-left li{
+  list-style: none;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
-.address{
-    color: #333333;
-    padding-left: 25%;
-    padding-right: 25%;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.bold{
-    font-size: 23px;
-    font-weight: 800;
+.footer-content-center li{
     text-decoration: underline;
 }
-.not-bold{
-    font-weight: 200;
-    margin-top: -12%;
+
+.footer-content-right h2, .footer-content-center h2{
+    color:  #495E57;
+  }
+
+.footer-social-icons img {
+    width: 40px;
+    margin-right: 15px;
+}
+.footer hr{
+    width: 100%;
+    height: 2px;
+    margin: 20px 0;
+    background-color: gray;
+    border: none;
 }
 
-.social-media{
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-.inside-col img{
-    width: 20px;
-    margin-right: 20px;
-
-}
-.inside-col{
-    display: flex;
-}
-
-
-h1{
-    font-size: 20px;
-    font-weight: bold
-}
-@media (max-width:1000px) {
- 
-    .footer{
-        margin-left: 0px;
-        margin-right: 0px;
+@media (max-width:750px){
+    .footer-content{
         display: flex;
-        flex-wrap: wrap; /* Allows wrapping on larger screens */
-        justify-content: center;
-        gap: 20px;
-        width: 100%;
+        flex-direction: column;
+        gap: 35px;
     }
-    .address{
-        padding-left: 35%;
-        padding-right: 35%;
+    .footer-copyright{
+        text-align: center;
+    }
 }
-.social-media{
-    padding-left: 0;
-    padding-right: 0;
-}
-}
-
-
-
-
- 
