--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -1,17 +1,16 @@
 .reservation-form {
     display: grid; 
-    max-width: 30%; 
+    max-width: 90%; 
     gap: 20px;
     margin: 2rem auto;
     padding: 2rem;
-    background-color:#bfc2c0 ;
-    border-radius: 16px;
+    background-color:#495E57 ;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
   
   .reservation-form h1 {
     text-align: center; 
-    color: #495E57;
+    color: #bfc2c0;
     font-size: 34px;
   }
   
@@ -19,33 +18,40 @@
     display: block;
     margin-top: 1rem;
     font-weight: 600;
-    color: #495E57;
+    color: #bfc2c0;
   }
   
 
-  .reservation-form input {
-    width: 100%;
-    padding: 0.6rem;
-    margin-top: 0.3rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-size: 1rem;
-  }
-  
-  .reservation-form select {
-    width: 100%;
-    padding: 0.6rem;
-    margin-top: 0.3rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-size: 1rem;
-  }
+  .reservation-form input,
+.reservation-form select {
+  width: 100%;
+  padding: 0.6rem;
+  margin-top: 0.3rem;
+  border-radius: 8px;
+  font-size: 1rem;
+}
+
+.form-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
   .reservation-form button {
-    margin-top: 1.5rem;
-    width: 100%;
-    padding: 0.8rem;
-    transition: background 0.3s ease;
+    padding: 0.6rem 1.5rem;
+    font-size: 1rem;
+    width: auto;
+    min-width: 150px;
+    background-color: #f4ce14;
+    border: none;
+    border-radius: 8px;
+    color: #333;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .reservation-form button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
   }
   .confirmation-message {
     background-color: #eafbe7;
@@ -84,4 +90,14 @@
     text-align: left;
   }
   
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-between;
+  }
   
+  .form-group {
+    flex: 1;
+    min-width: 45%;
+  }
